--- a/thesis/Ch6-Conclusion/Chapter6.tex
+++ b/thesis/Ch6-Conclusion/Chapter6.tex
@@ -44,16 +44,16 @@ The past few years have witnessed remarkable growth in Neural Network (NN) based
 The objective of this thesis was to improve the energy efficiency and throughput of NN accelerators on parallel architectures, considering the challenges posed by limited on-chip memory and high off-chip memory accesses. To achieve this goal, we focused on data reuse techniques, data partitioning, and scheduling strategies for different types of NNs.
 
 \section{Recapitulation of Research Objectives}
-The primary aim of this research was to enhance the energy efficiency and throughput of Neural Network (NN) accelerators by minimizing off-chip memory accesses. In Chapter~\ref{chap:introduction}, we defined our research objectives to address the challenges of energy efficiency and throughput in NN accelerators. This thesis explored various data reuse techniques for different types of NNs, including Self Organizing Maps (SOMs), Convolutional Neural Networks (CNNs), and Recurrent Neural Networks (RNNs). Additionally, an analytical framework was developed to quantify off-chip memory accesses, taking into account the architectural constraints, and to compare different data partitioning and scheduling schemes for optimizing NN performance on parallel architectures. 
+The primary aim of this research was to enhance the energy efficiency and throughput of Neural Network (NN) accelerators by minimizing off-chip memory accesses. In \chapref{chap:introduction}, we defined our research objectives to address the challenges of energy efficiency and throughput in NN accelerators. This thesis explored various data reuse techniques for different types of NNs, including Self Organizing Maps (SOMs), Convolutional Neural Networks (CNNs), and Recurrent Neural Networks (RNNs). Additionally, an analytical framework was developed to quantify off-chip memory accesses, taking into account the architectural constraints, and to compare different data partitioning and scheduling schemes for optimizing NN performance on parallel architectures. 
 
 \section{Summary of Key Findings}
-Chapter~\ref{chap:analyticalFw} presented an analytical framework that quantifies off-chip memory accesses for DNN layers with varying shapes, considering architectural constraints. This framework allowed us to compare different data partitioning and scheduling schemes and identify the optimal solutions for improving energy and throughput.
+\chapref{chap:analyticalFw} presented an analytical framework that quantifies off-chip memory accesses for DNN layers with varying shapes, considering architectural constraints. This framework allowed us to compare different data partitioning and scheduling schemes and identify the optimal solutions for improving energy and throughput.
 
-In Chapter~\ref{chap:CNN}, we proposed a data reuse approach for CNN layers that considers architectural parameters and determines the optimal partitioning and scheduling scheme. Our proposed approach demonstrated significant improvements in energy efficiency and throughput for memory-intensive CNN layers.
+In \chapref{chap:CNN}, we proposed a data reuse approach for CNN layers that considers architectural parameters and determines the optimal partitioning and scheduling scheme. Our proposed approach demonstrated significant improvements in energy efficiency and throughput for memory-intensive CNN layers.
 
-Chapter~\ref{chap:RNN} addressed the challenges of data reuse in recurrent neural networks (RNNs), particularly in Long-Short Term Memory Networks (LSTMs). We proposed a novel data reuse approach that efficiently reuses weights for consecutive time steps, significantly reducing off-chip memory accesses and improving energy efficiency.
+\chapref{chap:RNN} addressed the challenges of data reuse in recurrent neural networks (RNNs), particularly in Long-Short Term Memory Networks (LSTMs). We proposed a novel data reuse approach that efficiently reuses weights for consecutive time steps, significantly reducing off-chip memory accesses and improving energy efficiency.
 
-Chapter~\ref{chap:SOM} explored the impact of different bit resolutions on NN accuracy, focusing on Self-Organizing Maps (SOMs). We implemented different bit-width configurations on an FPGA and compared their performance, providing insights into energy-constrained systems' design.
+\chapref{chap:SOM} explored the impact of different bit resolutions on NN accuracy, focusing on Self-Organizing Maps (SOMs). We implemented different bit-width configurations on an FPGA and compared their performance, providing insights into energy-constrained systems' design.
 
 \section{Implications and Future Research Directions}
 The findings of this thesis have implications for optimizing NN accelerators in a wide range of applications, particularly in edge AI devices with limited energy and computing resources. The data reuse techniques and partitioning strategies can be extended and applied to modern AI models, such as Language Models (LLMs) and Stable Diffusion networks, to improve their energy efficiency and throughput.
