--- a/thesis/ThesisSpecificPages/acknowledge.tex
+++ b/thesis/ThesisSpecificPages/acknowledge.tex
@@ -12,16 +12,24 @@
 	{\Huge \textbf{Acknowledgments}} 
 \end{center}
 
-\begin{flushright}
-{\em``{I can no other answer make but thanks, and thanks, and ever thanks.}"} \\ 
-	\vspace{0.20cm}
-\textemdash  \bf William Shakespeare, \em Twelfth Night
-\end{flushright}
+%\begin{flushright}
+%{\em``{I can no other answer make but thanks, and thanks, and ever thanks.}"} \\ 
+%	\vspace{0.20cm}
+%\textemdash  \bf William Shakespeare, \em Twelfth Night
+%\end{flushright}
 
 \vspace{0.30cm}
 
-I would like to express my sincere thanks and gratitude towards \textbf{Prof. Anshul Kumar}, my Ph.D. supervisor. I interacted with him a few months before joining the Ph.D. programme and he has been advising me in various aspects right through then. Not only has he been a technical mentor, he has provided great insights on many other aspects of an academic life which would be useful for the future. I would also like to thank my supervisor \textbf{Prof. Kolin Paul} for providing practical insights and inputs on my thesis work. He has always been available for discussions and suggestions and pushed me to write the thesis in time. Both my supervisors have been very supportive during a few hard times in my research and have always motivated me. They actively helped me to complete the thesis during the COVID-19 related lockdown.
+I am deeply grateful to my esteemed Ph.D. supervisors, Prof. Anshul Kumar and Prof. Kolin Paul, for their exceptional guidance and unwavering support throughout my research journey. Their technical expertise and invaluable insights have been instrumental in shaping my academic growth and thesis work. They have not only provided mentorship but also offered valuable advice on various aspects of academic life, proving to be excellent mentors in every sense. Their constant availability for discussions, constructive suggestions, and motivation to complete my thesis on time have been indispensable. During the challenging times of the COVID-19 lockdown, their unwavering support kept me focused and encouraged.
 
+Heartfelt appreciation goes to my research committee members, Prof. M. Balakrishnan and Prof. Preeti Ranjan Panda, for their valuable suggestions and feedback on my thesis work, enriching its quality and depth. I am also sincerely grateful to Prof. Ahmed Hemani, a professor at KTH Sweden, for offering me the opportunity to work in their state-of-the-art CGRA accelerator labs, significantly enhancing my research exposure and knowledge.
 
+I extend my gratitude to all the instructors at IIT Delhi who imparted valuable skills during my coursework, contributing significantly to my overall academic growth.
+
+Special thanks go to my friends at IIT Delhi, Rajesh Kedia, Sandeep Kumar, Dishant Goyal, and Omais Shafi, for their unwavering support and valuable suggestions on useful writing tools, aiding me in crafting research papers and creating graphical representations. In particular, I want to acknowledge Rajesh Kedia for his meticulous review and invaluable feedback. I am grateful to Vandana Ahluwalia, the lab incharge, for providing access to the labs and resources, and to Som Dutt Sharma from the DHD-LAB for granting access to the FPGA boards and essential software, which played a critical role in my research.
+
+I am deeply thankful to my family members, including my wife, parents, and daughters, whose unwavering support and understanding made this achievement possible. Their love, encouragement, and sacrifices have been a constant source of motivation and strength. Lastly, I express gratitude to the Almighty for giving me the strength and opportunity to work with wonderful and helpful people.
+
+I would also like to acknowledge all those whose names may not be mentioned here but have contributed in various ways, big or small, to my personal and academic growth. Their collective support and encouragement have been the driving force behind the successful completion of my Ph.D. thesis, and I humbly acknowledge their invaluable contributions.
 \vspace{0.9cm}
 { \begin{flushright}{\bf Saurabh Tewari}\end{flushright} }
